--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "typescript-web-application",
+  "name": "@nuclearredeye/platforming",
   "version": "0.0.0",
-  "description": "Template for a TypeScript Web Application",
+  "description": "A simple 2d platforming engine built in TypeScript",
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NuclearRedeye/typescript-web-application.git"
+    "url": "git+https://github.com/NuclearRedeye/platforming.git"
   },
   "author": "NuclearRedeye",
   "license": "MIT",
-  "homepage": "https://github.com/NuclearRedeye/typescript-web-application#readme",
+  "homepage": "https://github.com/NuclearRedeye/platforming#readme",
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
